Closed Bug 490602 Opened 15 years ago Closed 15 years ago

Address book import leaks due to incorrect reference counting of proxy pointers

Categories

(MailNews Core :: Import, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b3

People

(Reporter: standard8, Assigned: standard8)

Details

(Keywords: memory-leak)

Attachments

(1 file)

Attached patch The fixSplinter Review
When we do an address book import, we're leaking various classes as we're not ref counting our pointers correctly.

I realised this when looking at the leaks on test_ldif_import.js with the latest patch from bug 438922 applied.

Patch attached to fix this - it switches to using nsCOMPtr on the proxy objects (as we do everywhere else), changes the function to return type already_AddRefed (which the result is), and stops the nsAbLDIFService keeping a pointer to the database - it doesn't need to as it only needs it for the life of the import.
Attachment #375004 - Flags: superreview?(bienvenu)
Attachment #375004 - Flags: review?(bienvenu)
Attachment #375004 - Flags: superreview?(bienvenu)
Attachment #375004 - Flags: superreview+
Attachment #375004 - Flags: review?(bienvenu)
Attachment #375004 - Flags: review+
Checked in: http://hg.mozilla.org/comm-central/rev/8e72da555191
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: