Bug 490602 Address book import leaks due to incorrect reference counting of proxy pointers. r/sr=bienvenu